feat: add authz and service token support
